--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+
+@import"https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css";
+
 .App {
   text-align: center;
 }
@@ -36,3 +39,24 @@
     transform: rotate(360deg);
   }
 }
+ 
+
+img{
+  margin-top: 50px;
+  width: 200px;
+  height: 300px;
+  
+  }  
+  
+  
+  .moviesCard{  
+    margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; 
+  
+  gap: 25px;
+  
+  } 
+
+  
